# functional-asteroids

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
inc/: bar.h  countof.h  foo.h
src/: main.cpp
